--- a/Mija Reader/Mija Reader.csproj
+++ b/Mija Reader/Mija Reader.csproj
@@ -135,6 +135,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BaseMangaSource\BaseMangaSource.csproj">
+      <Project>{dbd92dc4-4a74-4cdf-8048-6e3c783af4b7}</Project>
+      <Name>BaseMangaSource</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
