Details window (let you view more details about selected manga and add it to library)

--- a/Mija Reader/Mija Reader.csproj
+++ b/Mija Reader/Mija Reader.csproj
@@ -80,6 +80,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="AdditionalControls\MangaDetailsViewer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="AdditionalControls\MetroMessageBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -92,6 +96,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="AdditionalControls\MangaDetailsViewer.xaml.cs">
+      <DependentUpon>MangaDetailsViewer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AdditionalControls\MetroMessageBox.xaml.cs">
       <DependentUpon>MetroMessageBox.xaml</DependentUpon>
     </Compile>
