--- a/Mija Reader/Mija Reader.csproj
+++ b/Mija Reader/Mija Reader.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Core\BaseLanguage.cs" />
     <Compile Include="Core\Converters.cs" />
     <Compile Include="Core\Ini.cs" />
+    <Compile Include="Core\XmlLibrary.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
