zooming and panning displayed image, preparing reader for 'view online' feature

--- a/Mija Reader/Mija Reader.csproj
+++ b/Mija Reader/Mija Reader.csproj
@@ -105,6 +105,7 @@
     <Compile Include="AdditionalControls\SearchTextBox.xaml.cs">
       <DependentUpon>SearchTextBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AdditionalControls\ZoomPanel.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
