--- a/Mija Reader/packages.config
+++ b/Mija Reader/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net46" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net46" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net46" />
   <package id="RestSharp" version="105.0.1" targetFramework="net46" />
+  <package id="TweetSharp-Unofficial" version="2.3.1.2" targetFramework="net46" />
 </packages>
