--- a/Mija Reader/Mija Reader.csproj
+++ b/Mija Reader/Mija Reader.csproj
@@ -126,6 +126,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Core\BaseLanguage.cs" />
+    <Compile Include="Core\config.cs" />
     <Compile Include="Core\Converters.cs" />
     <Compile Include="Core\DragAdoner.cs" />
     <Compile Include="Core\Ini.cs" />
